workspace(name = "cohttp")

load("//bzl:deps.bzl", "conduit_deps")

conduit_deps()

load("//bzl:transitive.bzl", "conduit_transitive_deps")

conduit_transitive_deps()

load("//bzl:setup.bzl", "conduit_setup")

conduit_setup()

load("@obazl_rules_ocaml//ocaml:bootstrap.bzl", "ocaml_configure")
load("//bzl:opam.bzl", "opam")

ocaml_configure(
    build = "4.12",
    opam = opam,
)
